# misc-etl-projects

./: .env.template  .gitignore  README.md  api_elt.ipynb  cars45_etl.ipynb  clean_cars45.csv  pyproject.toml  requirements.txt  superstore_etl.ipynb
sources/: car45_data.csv
