# Project configuration
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-engineering"
version = "0.1.0"
description = "ETL and data engineering pipelines"
authors = [{name = "Developer"}]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "jupyter>=1.0.0",
    "numpy>=1.20.0",
]
